fix: solved background image width and MusicPlayer z-index

--- a/packages/client/src/components/Layout/Layout.scss
+++ b/packages/client/src/components/Layout/Layout.scss
@@ -23,7 +23,7 @@ footer {
     z-index: -1;
     top: -5%;
     left: -5%;
-    width: 110%;
+    width: 100%;
     height: 110%;
     filter: blur(30px) brightness(70%);
   }
