--- a/packages/client/src/components/MusicPlayer/MusicPlayer.scss
+++ b/packages/client/src/components/MusicPlayer/MusicPlayer.scss
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0.2rem;
+  z-index: 999;
   // overflow-x: hidden;
 }
 .rhap_container {
